# $Id: CHANGELOG,v 1.7 2005/02/17 15:22:54 tom_kelly33 Exp $

* 2005-02-17
	- added sata_nv 

* 2005-01-15
	- added 'don't install lilo' entry

* 2004-12-20/31
        [livecd-utils]
	- made format swap default to yes
        - added 'nomce acpi=ht' to append options
        - changed bootloader item number
        - added touch  $mnt/halt (and commented out other)

* 2004: Numerous changes

* Tue, Dec 02, 2003, 0.2.0-cvs
  + Jaco Greeff <jaco@linuxminicd.org>:
    [livecd-install]:
      - Total revamp using perl-Qt
      - Initial release/announcement
      
* Fri, Nov 21, 2003, 0.1.0-cvs
  + Jaco Greeff <jaco@linuxminicd.org>:
    [livecd-install]:
      - Initial version
