@@ -21,7 +21,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: livecd-install,v 1.89 2005/02/17 15:22:54 tom_kelly33 Exp $
+# $Id: livecd-install,v 1.90 2005/03/01 15:45:00 tom_kelly33 Exp $
 #
 
 package fMain;
@@ -240,7 +240,7 @@ sub getStr {
 }
 # Form implementation generated from reading ui file 'livecd-install.ui'
 #
-# Created: Thu Feb 17 09:12:42 2005
+# Created: Tue Mar 1 09:48:24 2005
 #      by: The PerlQt User Interface Compiler (puic)
 #
 # WARNING! All changes made in this file will be lost!
@@ -3836,7 +3836,7 @@ sub languageChange
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: livecd-install,v 1.89 2005/02/17 15:22:54 tom_kelly33 Exp $
+# $Id: livecd-install,v 1.90 2005/03/01 15:45:00 tom_kelly33 Exp $
 #
 
 #use LCDLang;
@@ -3895,7 +3895,7 @@ my $pb_o_num      : shared = 0;
 my $pb_o_tot      : shared = 0;
 
 my @satalist = qw(libata sd_mod ata_piix scsi_mod sr_mod sg a100u2w
-		advansys aha152x aha1542 aic7xxx BusLogic fdomain gdth
+		advansys aha152x aha1542 aic7xxx ata_piix BusLogic fdomain gdth
 		megaraid sata_nv sata_promise sata_sil sata_svw sata_via sata_vsc);
 
 my %devs   = ();
@@ -5100,7 +5100,7 @@ sub cbLanguage_act # SLOT: ( const QString & )
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: livecd-install,v 1.89 2005/02/17 15:22:54 tom_kelly33 Exp $
+# $Id: livecd-install,v 1.90 2005/03/01 15:45:00 tom_kelly33 Exp $
 #
 
 package main;
